# pivotal.ai

./: .gitignore  Procfile  README.md  home.tsx  requirements.txt
b-e/: COMMANDS.md  Dockerfile  custom_console.py  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  railway.toml  requirements.txt
b-e/authentication/: models.py  tests.py  urls.py  views.py
b-e/authentication/migrations/: 0001_initial.py  0002_user_is_deleted.py  0003_rename_first_name_user_username.py  0004_user_theme.py
b-e/config/: settings.py  tasks.py  urls.py  views.py
b-e/db/init/: 01_init.sql
b-e/financial_data/: indicators.py  models.py  services.py  tests.py  urls.py  views.py
b-e/financial_data/migrations/: 0001_initial.py
b-e/paper_trading/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
b-e/paper_trading/migrations/: 0001_initial.py  0002_optioncontract_optionposition_optionstrategy_and_more.py
b-e/pivotal-api/: asgi.py  settings.py  wsgi.py
b-e/pivotal_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
b-e/pivy_chat/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
b-e/pivy_chat/management/commands/: run_pivy_task.py
b-e/pivy_chat/migrations/: 0001_initial.py  0002_alter_chatmessage_user.py
b-e/pivy_chat/services/: __init__.py  llm_service.py  news_service.py  price_monitor.py
b-e/redis/: redis.conf
demo/: README.md
f-e/: COMMANDS.md  babel.config.js  jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.js
f-e/__tests__/: CollapsibleSection.test.tsx  (+7 more)
(+124 files in other folders)
