[project]
name = "pivotal-api"
version = "0.1.0"
description = "Pivotal API backend"
dependencies = [
    "asgiref==3.11.0",
    "Django==5.2.9",
    "psycopg==3.3.1",
    "psycopg-binary==3.3.1",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.4",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"