[project]
name = "pivotal-api"
version = "0.1.0"
description = "Pivotal API backend"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "celery>=5.3.0",
    "Django==5.2.9",
    "django-cors-headers>=4.0.0",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.3.0",
    "gunicorn>=21.2.0",
    "psycopg==3.3.1",
    "psycopg-binary==3.3.1",
    "python-dotenv==1.2.1",
    "redis>=4.5.0",
    "requests>=2.25.0",
    "sqlparse==0.5.4",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
]

[tool.hatch.build.targets.wheel]
packages = ["config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"